--- a/The-Pet-Shop-Website/index.html
+++ b/The-Pet-Shop-Website/index.html
@@ -1,98 +1,118 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>The Pet Shop</title>
-        <meta charset="UTF-8">
-        <meta name="description" content="Look at all pets available for purchase.">
-    </head>
-    <body>
-        <!--NAVBAR-->
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-            <ul>
-                <a href="#cat"><li>Cats & Kittens</li></a>
-                <a href="#dog"><li>Dogs & Puppies</li></a>
-                <a href="#rabbit"><li>Rabbits</li></a>
-                <a href="#guineaPig"><li>Guinea Pigs</li></a>
-                <a href="#fish"><li>Fish</li></a>
-                <a href="#reptile"><li>Reptiles</li></a>
-                <a href="#video"><li>Videos</li></a>
-            </ul>
-        </nav>
-        <!--HEADER-->
-        <header>
+
+<head>
+    <title>The Pet Shop</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+    <!--NAVBAR-->
+    <nav class="nav-bar">
+        <ul id="nav-border">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+        <ul>
+            <li><a href="#cat">Cats & Kittens</a></li>
+            <li><a href="#dog">Dogs & Puppies</a></li>
+            <li><a href="#rabbit">Rabbits</a></li>
+            <li><a href="#guineaPig">Guinea Pigs</a></li>
+            <a href="#fish">Fish</a></li>
+            <a href="#reptile">Reptiles</a></li>
+            <a href="#video">Videos</a></li>
+        </ul>
+    </nav>
+    <!--HEADER-->
+    <header>
+        <div>
+            <h1 class="animate-text">Welcome to the Pet Shop!</h1>
+        </div>
+    </header>
+    <!--PET IMAGES-->
+    <section>
+        <div class="container">
+            <h2>Choose a Pet!</h2>
             <div>
-                <h1>Welcome to the Pet Shop!</h1>
-            </div>
-            <blockquote cite="Anatole France">
-                Until one has loved an animal, a part of one's soul remains unawakened.-Anatole France
-            </blockquote>
-        </header>
-        <!--PET IMAGES-->
-        <section>
-            <div>
-                <h2>Choose a Pet!</h2>
-                <div>
-                    <!--CAT IMAGE-->
-                    <div id="cat">
+                <!--CAT IMAGE-->
+                <div id="cat" class="column">
+                    <div class="image-container">
                         <h3>Cats & Kittens</h3>
                         <img src="images/cat.jpg" alt="Picture of kittens">
-                    </div>
-                    <!--DOG IMAGE-->
-                    <div id="dog">
-                        <h3>Dogs & Puppies</h3>
-                        <img src="images/dog.jpg" alt="Picture of puppies">
-                    </div>
-                    <!--RABBIT IMAGE-->
-                    <div id="rabbit">
-                        <h3>Rabbits</h3>
-                        <img src="images/rabbit.jpg" alt="Picture of rabbits">
-                    </div>
-                    <!--GUINEA PIG IMAGE-->
-                    <div id="guineaPig">
-                        <h3>Guinea Pigs</h3>
-                        <img src="images/guinea_pig.jpg" alt="Picture of guinea pigs">
-                    </div>
-                    <!--FISH IMAGE-->
-                    <div id="fish">
-                        <h3>Fish</h3>
-                        <img src="images/fish.jpg" alt="Picture of fish">
-                    </div>
-                    <!--REPTILE IMAGE-->
-                    <div id="reptile">
-                        <h3>Reptiles</h3>
-                        <img src="images/bearded_dragon.jpg" alt="Picture of bearded dragon">
+                        <div class="overlay"></div>
                     </div>
                 </div>
+                <!--DOG IMAGE-->
+                <div id="dog" class="column">
+                    <div class="image-container">
+                    <h3>Dogs & Puppies</h3>
+                    <img src="images/dog.jpg" alt="Picture of puppies">
+                    <div class="overlay"></div>
+                </div>
             </div>
-        </section>
-        <!--VIDEOS-->
-        <section>
-            <!--DOG VIDEO-->
-            <div id="video">
-                <h3>Videos</h3>
-                <iframe width="1280" height="720" src="https://www.youtube.com/embed/ng58pNPDDW4"></iframe>
+            <!--RABBIT IMAGE-->
+            <div id="rabbit" class="column">
+                <div class="image-container">
+                    <h3>Rabbits</h3>
+                    <img src="images/rabbit.jpg" alt="Picture of rabbits">
+                    <div class="overlay"></div>
+                </div>
             </div>
-        </section>
-        <!--FOOTER-->
-        <footer>
-            <table>
-                <tr>
-                    <td>
-                        <p>The Pet Shop!&copy;</p>
-                    </td>
-                    <td>
-                        <p>123 Square Ave</p>
-                        <p>Portland, OR 97204</p>
-                    </td>
-                    <td>
-                        <p>503-234-3966</p>
-                    </td>
-                </tr>
-            </table>
-        </footer>
-    </body>
+            <!--GUINEA PIG IMAGE-->
+            <div id="guineaPig" class="column">
+                <div class="image-container">
+                    <h3>Guinea Pigs</h3>
+                    <img src="images/guinea_pig.jpg" alt="Picture of guinea pigs">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+            <!--FISH IMAGE-->
+            <div id="fish" class="column">
+                <div class="image-container">
+                    <h3>Fish</h3>
+                    <img src="images/fish.jpg" alt="Picture of fish">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+            <!--REPTILE IMAGE-->
+            <div id="reptile" class="column">
+                <div class="image-container">
+                    <h3>Reptiles</h3>
+                    <img src="images/bearded_dragon.jpg" alt="Picture of bearded dragon">
+                    <div class="overlay"></div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <!--VIDEOS-->
+    <section>
+        <!--DOG VIDEO-->
+        <div id="video" class="container">
+            <h3>Videos</h3>
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/ng58pNPDDW4"></iframe>
+        </div>
+    </section>
+    <!--FOOTER-->
+    <footer>
+        <table>
+            <tr>
+                <td>
+                    <p>The Pet Shop!&copy;</p>
+                </td>
+                <td>
+                    <p>123 Square Ave</p>
+                    <p>Portland, OR 97204</p>
+                </td>
+                <td>
+                    <p>503-234-3966</p>
+                </td>
+            </tr>
+        </table>
+    </footer>
+</body>
+
 </html>
