--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title>Europe Trip</title>
-            <meta charset="UTF-8">
-            <meta name="description" content="Photo's from my trip to Europe.">
+        <title>Europe Trip</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href=css/one_page_website.css>
     </head>
     <body>
         <!--NAVBAR-->
@@ -68,7 +68,6 @@
                     <input type="text" placeholder="Last Name"><br>
                     <input type="email" placeholder="Email"><br>
                     <input type="tel" placeholder="Phone Number"><br>
-                    <input type="checkbox" id="Newsletter">
                     <textarea placeholder="Type message here..."></textarea><br>
                     <input type="submit" value="Submit">
                 </form>
