--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -16,39 +16,80 @@
                 <a href="#video"><li>Video</li></a>
             </ul>
         </nav>
-    </body>
     <!--HEADER-->
     <header>
         <div>
             <h1>Welcome to my Europe Trip!</h1>
         </div>
     </header>
-    <!--TRAVEL IMAGES-->
-    <section>
-            <div>
-                <h2>Choose a City!</h2>
-            </div>
-            <!--CASTLE IMAGE-->
-            <div id="castle">
-                <h3>Castle</h3>
-                <img src="images/Castle.jpeg" width="400" height="500" alt="Picture of a castle">
-            </div>
-            <!--COLMAR IMAGE-->
-            <div id="colmar">
-                <h3>Colmar</h3>
-                <img src="images/Colmar.jpeg" width="400" height="500" alt="Picture of Colmar">
-            </div>
-            <!--PARIS IMAGE-->
-            <div id="paris">
-                <h3>Paris</h3>
-                <img src="images/Paris.jpeg" width="400" height="500" alt="Picture of Paris">
-            </div>
-            <!--STRASBOURG-->
-            <div id="strasbourg">
-                <h3>Strasbourg</h3>
-                <img src="images/Strasbourg.jpeg" width="400" height="500" alt="Picture of Strasbourg">
-            </div>
-    </section>
+   <!-- Images used to open the lightbox -->
+<div class="row">
+    <div id="castle" class="column">
+      <img src="images/Castle-small.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+    </div>
+    <div id="colmar" class="column">
+      <img src="images/Colmar-small.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+    </div>
+    <div id="paris" class="column">
+      <img src="images/Paris-small.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+    </div>
+    <div id="strasbourg" class="column">
+      <img src="images/Strasbourg-small.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+    </div>
+  </div>
+  
+  <!-- The Modal/Lightbox -->
+  <div id="myModal" class="modal">
+    <span class="close cursor" onclick="closeModal()">&times;</span>
+    <div class="modal-content">
+  
+      <div class="mySlides">
+        <div class="numbertext">1 / 4</div>
+        <img src="images/Castle.jpeg" style="width:100%">
+      </div>
+  
+      <div class="mySlides">
+        <div class="numbertext">2 / 4</div>
+        <img src="images/Colmar.jpeg" style="width:100%">
+      </div>
+  
+      <div class="mySlides">
+        <div class="numbertext">3 / 4</div>
+        <img src="images/Paris.jpeg" style="width:100%">
+      </div>
+  
+      <div class="mySlides">
+        <div class="numbertext">4 / 4</div>
+        <img src="images/Strasbourg.jpeg" style="width:100%">
+      </div>
+  
+      <!-- Next/previous controls -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+      <!-- Caption text -->
+      <div class="caption-container">
+        <p id="caption"></p>
+      </div>
+  
+      <!-- Thumbnail image controls -->
+      <div class="column">
+        <img class="demo" src="images/Castle-small.jpg" onclick="currentSlide(1)" alt="Castle">
+      </div>
+  
+      <div class="column">
+        <img class="demo" src="images/Colmar-small.jpg" onclick="currentSlide(2)" alt="Colmar">
+      </div>
+  
+      <div class="column">
+        <img class="demo" src="images/Paris-small.jpg" onclick="currentSlide(3)" alt="Paris">
+      </div>
+  
+      <div class="column">
+        <img class="demo" src="images/Strasbourg-small.jpg" onclick="currentSlide(4)" alt="Strasbourg">
+      </div>
+    </div>
+  </div>
     <!--VIDEO-->
     <section>
         <!--CASTLE VIDEO-->
@@ -74,21 +115,23 @@
             </div>
         </div>
     </section>
-     <!--FOOTER-->
-     <footer>
-        <table>
-            <tr>
-                <td>
-                    <p>My Europe Trip Photos
-                </td>
-                <td>
-                    <p>1017 West 5th St</p>
-                    <p>Ogallala, NE 69153</p>
-                </td>
-                <td>
-                    <p>308-280-0465</p>
-                </td>
-            </tr>
-        </table>
-    </footer>
+        <!--FOOTER-->
+        <footer>
+            <table>
+                <tr>
+                    <td>
+                        <p>My Europe Trip Photos
+                    </td>
+                    <td>
+                        <p>1017 West 5th St</p>
+                        <p>Ogallala, NE 69153</p>
+                    </td>
+                    <td>
+                        <p>308-280-0465</p>
+                    </td>
+                </tr>
+            </table>
+        </footer>
+        <script src="JS/one_page_website.js"></script>
+    </body>
 </html>
