--- a/Academy Cinemas/index.html
+++ b/Academy Cinemas/index.html
@@ -7,7 +7,8 @@
     <title>Academy Cinemas</title>
     <!--BOOTSTRAP CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
     <!--CUSTOM CSS listed last to override Bootstrap CSS
     based on levels of specificity-->
     <link href="css/custom.css" rel="stylesheet">
@@ -16,10 +17,6 @@
   </head>
 
   <body>
-    <!--BOOTSTRAP JAVASCRIPT-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-    crossorigin="anonymous"></script>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
@@ -62,7 +59,13 @@
             <!--BEN HUR-->
             <div class="d-flex flex-row flex-wrap spacer" id="ben-hur">
                 <div class="col-lg-5 mx-auto">
-                    <img src="images/ben-hur.jpg" class="img-fluid" alt="Ben Hur movie poster">
+                    <span class="d-inline-block" tabindex="0" 
+                    data-bs-toggle="popover" 
+                    data-bs-trigger="hover focus" 
+                    data-bs-img="images/four-and-half-stars.png"
+                    data-bs-title="Ben Hur Rating">
+                        <img src="images/ben-hur.jpg" class="img-fluid" alt="Ben Hur movie poster">
+                      </span>
                 </div>
                 <div class="card col-lg-5 mx-auto">
                     <div class="card-body">
@@ -134,13 +137,25 @@
                     </div>
                 </div>
                 <div class="col-lg-5 mx-auto">
+                    <span class="d-inline-block" tabindex="0" 
+                    data-bs-toggle="popover" 
+                    data-bs-trigger="hover focus" 
+                    data-bs-img="images/four-stars.png"
+                    data-bs-title="The Day the Earth Stood Still Rating">
                     <img src="images/earth-stood-still.jpg" class="img-fluid" alt="The Day the Earth Stood Still movie poster">
+                      </span>
                 </div>
             </div>
             <!--VERTIGO-->
             <div class="d-flex flex-row flex-wrap spacer" id="vertigo">
                 <div class="col-lg-5 mx-auto">
+                    <span class="d-inline-block" tabindex="0" 
+                    data-bs-toggle="popover" 
+                    data-bs-trigger="hover focus" 
+                    data-bs-img="images/four-and-half-stars.png"
+                    data-bs-title="Vertigo Rating">
                     <img src="images/vertigo.jpg" class="img-fluid" alt="Vertigo movie poster">
+                      </span>
                 </div>
                 <div class="card col-lg-5 mx-auto">
                     <div class="card-body">
@@ -189,7 +204,7 @@
                     <div class="card text-center">
                         <h5 class="card-title">Please select a movie</h5>
                         <div class="card-body">
-                            <select class="form-select" aria-label="Movie title selection">
+                            <select id="movieSelect" class="form-select" aria-label="Movie title selection">
                                 <option selected>Select movie</option>
                                 <option value="1">Ben-Hur</option>
                                 <option value="2">The Day the Earth Stood Still</option>
@@ -203,7 +218,7 @@
                     <div class="card text-center">
                         <h5 class="card-title">Please select a show time</h5>
                         <div class="card-body">
-                            <select class="form-select" aria-label="Show time selection">
+                            <select id="timeSelect" class="form-select" aria-label="Show time selection">
                                 <option selected>Select time</option>
                                 <option value="1">10:00 AM</option>
                                 <option value="2">11:30 AM</option>
@@ -229,11 +244,21 @@
             <!--BUY TICKETS BUTTON-->
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <button type="submit" class="btn yellow-btn">Buy Tickets</button>
+                    <button type="submit" class="btn yellow-btn" onclick="buyTickets()">Buy Tickets</button>
                 </div>
             </div>
         </div>
       </section>
+      <!--BOOTSTRAP TOAST-->
+      <div id="toastDisplay" class="custom-toast toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="me-auto">Ticket Information</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div id="toastBody" class="toast-body">
+          <!--Selected options will be displayed here-->
+        </div>
+      </div>
       <!--CONTACT FORM-->
       <section>
         <div class="container" id="contact">
@@ -271,6 +296,9 @@
             </footer>
           </div>
       </section>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<script src="javascript/javascript.js"></script>
   </body>
 
 </html>
